2008-01-06 Robert Schwebel <r.schwebel@pengutronix.de>

	* sjinn: added; patch by Tom St

2008-01-01 Robert Schwebel <r.schwebel@pengutronix.de>

	* nfsutils: removed obsolete patches for nfsutils 1.0.1; we
	have 1.0.8 in the meantime.
	* ppp: update version to 2.4.4
	* ppp: make ppp cross compilable
	* rsync3: added rsync 3.0.0pre7 in order to test
	the new and probably less memory consuming algorithms
	* xkbcomp: fixed dependency to xorg-lib-xkbfile.

2007-12-31 Robert Schwebel <r.schwebel@pengutronix.de>

	* hackbench: added; patch by Michael Olbrich

	* calibrator: added; patch by Michael Olbrich

	* libxml2: set LIBXML2_ENV needed for a correct generation when the
	cross toolchain prefix and the target name differs. strip the lib on the
	target file system. Patch by Guillaume Gourat.

	* busybox: If busybox feature "BB_CONFIG_FEATURE_SUID" is
	set, the busybox binary must be installed on the target
	with the SUID bit set. There are several features which
	will turn on the SUID feature implicitly including: login,
	passwd, su, vlock, crond, crontab, ipcs, ipcrm.
	Patch by Randall Loomis.

	* xauth: added; patch by Claudio Leonel
	* haserl: added; patch by Tom St

2007-12-29 Robert Schwebel <r.schwebel@pengutronix.de>

	* net-snmp: refactored menu entries to use positive logic
	* fbgrab: added; patch by Roland Hostettler
	* net-snmp: added; patch by Randall Loomis

2007-12-28  Robert Schwebel <r.schwebel@pengutronix.de>

	* sudo: fixed URL
	* mad: fixed URL, moved packet to pengutronix server because
	upstream version has disappeared
	* pekwm: fixed URL (dito)
	* sqlite: version bump, old version was not available any more
	* unionfs: fixed URL
	* pdksh: fixed URL
	* flash: fixed URL

2007-12-27  Robert Schwebel <r.schwebel@pengutronix.de>

	* lighttpd: adds lighttpd to ptxdist. Lighttpd is another
	popular web server for embedded targets. Patch by Daniel
	Schnell. The configuration is dependant on fast cgi, pcre and
	openssl.
