@@ -80,6 +80,7 @@ source "rules/sudo.in"
 source "rules/sysfsutils.in"
 source "rules/sysutils.in"
 source "rules/util-linux.in"
+source "rules/util-linux-ng.in"
 source "rules/udev.in"
 source "rules/xmlstarlet.in"
 source "rules/pciutils.in"
