@@ -1,0 +1,118 @@
+menuconfig UTIL_LINUX_NG
+
+	bool "util-linux-ng       "
+	select NCURSES if UTIL_LINUX_NG_CFDISK
+	select E2FSPROGS
+
+config UTIL_LINUX_NG_FDISK
+	bool
+	prompt "fdisk"
+	depends on UTIL_LINUX_NG
+	depends on !BB_CONFIG_FDISK
+	help
+	  fdisk - Partition table manipulator for Linux
+
+comment "busy box' fdisk is selected!"
+	depends on UTIL_LINUX_NG && BB_CONFIG_FDISK
+
+config UTIL_LINUX_NG_SFDISK
+	bool
+	prompt "sfdisk"
+	depends on UTIL_LINUX_NG
+	help
+	  sfdisk - Partition table manipulator for Linux,
+	  scriptable for unattended partitioning
+
+config UTIL_LINUX_NG_CFDISK
+	bool
+	prompt "cfdisk"
+	depends on UTIL_LINUX_NG
+	select NCURSES
+	help
+	  cfdisk is a curses based program for partitioning any hard disk drive.
+
+config UTIL_LINUX_NG_MKSWAP
+	bool
+	prompt "mkswap"
+	depends on UTIL_LINUX_NG
+	depends on !BB_CONFIG_MKSWAP
+	help
+	  mkswap sets up a Linux swap area on a device or in a file.
+
+comment "busy box' mkswap is selected!"
+	depends on UTIL_LINUX_NG && BB_CONFIG_MKSWAP
+
+config UTIL_LINUX_NG_SWAPON
+	bool
+	prompt "swapon"
+	depends on UTIL_LINUX_NG
+	depends on !BB_CONFIG_SWAPONOFF
+	help
+	  Swapon is used to specify devices on which paging and swapping are to take place.
+
+comment "busy box' swapon is selected!"
+	depends on UTIL_LINUX_NG && BB_CONFIG_SWAPONOFF
+
+config UTIL_LINUX_NG_MOUNT
+	bool
+	prompt "mount"
+	depends on UTIL_LINUX_NG
+	depends on !BB_CONFIG_MOUNT
+	help
+	  The mount command serves to attach the file system
+	  found on some device to the big file tree.
+
+comment "busy box' mount is selected!"
+	depends on UTIL_LINUX_NG && BB_CONFIG_MOUNT
+
+config UTIL_LINUX_NG_UMOUNT
+	bool
+	prompt "umount"
+	depends on UTIL_LINUX_NG
+	depends on !BB_CONFIG_UMOUNT
+	help
+	  The mount(8) command serves to attach the file system
+	  found on some device to the big file tree.
+	  Conversely, the umount(8) command will detach it again.
+
+comment "busy box' umount is selected!"
+	depends on UTIL_LINUX_NG && BB_CONFIG_UMOUNT
+
+config UTIL_LINUX_NG_IPCS
+	bool
+	prompt "ipcs"
+	depends on UTIL_LINUX_NG
+	depends on !BB_CONFIG_IPCS
+	help
+	  ipcs provides information on the ipc facilities
+	  for which the calling process has read acccess.
+
+comment "busy box' ipcs is selected!"
+	depends on UTIL_LINUX_NG && BB_CONFIG_IPCS
+
+config UTIL_LINUX_NG_READPROFILE
+	bool
+	prompt "readprofile"
+	depends on UTIL_LINUX_NG
+	depends on !BB_CONFIG_READPROFILE
+	help
+	  The readprofile command uses the /proc/profile information
+	  to print ascii data on standard output.  The output is
+	  organized in three columns: the first is the number of
+	  clock ticks, the second is the name of the C function
+	  in the kernel where those many ticks occurred, and the
+	  third is the normalized  `load' of the procedure, calculated
+	  as a ratio between the number of ticks and the length of the
+	  procedure. The output is filled with blanks to ease readability.
+
+comment "busy box' readprofile is selected!"
+	depends on UTIL_LINUX_NG && BB_CONFIG_READPROFILE
+
+config UTIL_LINUX_NG_SETTERM
+	bool
+	prompt "setterm"
+	depends on UTIL_LINUX_NG
+	help
+	  setterm - set terminal attributes like terminal name, cursor
+	  blinking and beeper sound
+
